<resources>
    <string name="app_name">FinanceApplication</string>
    <string name="title_home">AddExpense</string>
    <string name="title_dashboard">ViewExpense</string>
    <string name="title_notifications">AccountInfo</string>
    <string name="name">Name:</string>
    <string name="empty_space" />
    <string name="email">Email:</string>
    <string name="sign_out">Sign Out</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="userimage">UserImage</string>
    <string name="linechart">Linechart</string>

    <string name="long_Text">

        This This This This This This This This This This This This This This This This This This This
        This This This This This This This This This This This This This This This This This This This

        IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS
        IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS IS

        The The The The The The The The The The The The The The The The The The The The The The The The
        The The The The The The The The The The The The The The The The The The The The The The The The

        Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last
        Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last Last

        Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment
        Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment Fragment


    </string>

</resources>
