<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountInfoFragment">

    <TextView
        android:id="@+id/account_info_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/account_info_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="100dp"
        android:text="@string/empty_space"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/account_info_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/account_info_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="120dp"
        android:text="@string/empty_space"
        android:textSize="18sp" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="225dp"
        android:text="@string/sign_out"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/userimage"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <TextView
        android:id="@+id/share_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="300dp"
        android:clickable="true"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/invite_a_friend"
        android:textSize="14sp"
        android:focusable="true" />


</FrameLayout>